[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.2"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
  
tokio = {version = "1.0" , features = ["full"] }

mini-redis = "0.4"

bytes = "1"

tracing = "0.1"
tracing-subscriber = "0.2"